style: preventing text overflowing from div block

--- a/src/components/Todo/todo.scss
+++ b/src/components/Todo/todo.scss
@@ -2,36 +2,49 @@
 
 .todo-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   justify-content: center;
+  max-height: 8rem;
+  width: 12rem;
 
   &__title-section {
     position: relative;
-    width: 12rem;
+    min-width: 12rem;
+    min-height: 4rem;
     padding: 15px 0;
     display: flex;
     justify-content: center;
     background-color: var(--overlay-mask);
     color: white;
     border-radius: 15px 15px 0px 0px;
-    min-height: 4rem;
+  }
+
+  &__title {
+    align-self: center;
+    font-weight: 1000;
+    font-size: medium;
   }
 
   &__description-section {
     border: 1px solid black;
     border-radius: 0px 0px 15px 15px;
-    width: 12rem;
+    min-width: 12rem;
     min-height: 4rem;
     display: flex;
     @include flexCenter;
     overflow: auto;
   }
   &__description {
+    display: inline-block;
     align-items: center;
     align-self: center;
     font-size: 18px;
     font-style: italic;
+    word-break: break-word;
+    text-align: justify;
+    padding: 10px;
   }
   &__completedBtn {
     background: var(--blue);
@@ -58,11 +71,6 @@
   }
   &__deleteBtn:hover {
     background: var(--overlay-mask);
-  }
-  &__title {
-    align-self: center;
-    font-weight: 1000;
-    font-size: medium;
   }
   &__completed {
     text-decoration: line-through;
