--- a/src/components/TodoList/todoList.scss
+++ b/src/components/TodoList/todoList.scss
@@ -6,18 +6,22 @@
   grid-template-columns: repeat(6, 1fr);
   align-items: center;
   justify-items: center;
-  grid-gap: 5px;
+  justify-self: center;
+  grid-gap: 10px;
+  padding: 10px;
 }
 
 .todo-wrapper-flex {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex: 1;
   gap: 20px;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 @media screen and (max-width: 1024px) {
-  .todo-wrapper-grid{
+  .todo-wrapper-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
